# simple-web-server-rs

./: .env  Cargo.toml  README.md  makefile
src/: handlers.rs  main.rs  model.rs
