[package]
name = "simple-web-server"
version = "0.1.0"
edition = "2021"
authors = ["Leif Brockman <lbrockma34@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
anyhow = "1.0.55"
log = "0.4.1"
env_logger = "0.9.0"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["v4"] }
serde = "1.0.2"
serde_json = "1.0.79"
